<resources>
    <string name="app_name">SmartTag</string>
    <string name="app_name_1st">Smart</string>
    <string name="app_name_2nd">Tag</string>
    <string name="loading">Loading</string>
    <string name="welcome_permissionscheck">Checking permissions...</string>
    <string name="welcome_retrievingdevinfo">Collecting device info...</string>
    <string name="welcome_connectionestablish">Connecting to server...</string>
    <string name="welcome_connectionerror">Connection failed</string>
    <string name="welcome_connectionestablished">Connection established</string>
    <string name="welcome_newclient">New client detected</string>
    <string name="welcome_registrationsuccess">Registration successful</string>
    <string name="welcome_registrationfail">Registration failed</string>
    <string name="weclome_permissionsgranted">Permissions allowed</string>
    <string name="welcome_permissionerror">Permission Error</string>
    <string name="registration_form">Registration Form</string>
    <string name="company_name">Company Name</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="stop">STOP</string>
    <string name="launching_services">Launching Services</string>
    <string name="stop_bluetooth_request">Stop bluetooth request</string>
    <string name="start_bluetooth_request">Start bluetooth request</string>
    <string name="scan_new_devices">Scan new devices</string>
    <string name="check_gps_service_status">Check gps service status</string>
    <string name="status">Status</string>
    <string name="scan_mode_status">Scan mode status</string>
    <string name="bluetooth_service_status">Bluetooth service status</string>
    <string name="gps_service_status">Gps service status</string>
    <string name="available_devices">Available Devices</string>
    <string name="request_enabled">Request Enabled</string>
    <string name="request_disabled">Request disabled</string>
    <string name="scan_mode_enabled">Scan mode enabled</string>
    <string name="scan_mode_disabled">Scan mode disabled</string>
    <string name="gps_status_requested">Gps status requested</string>
    <string name="gps_location_arrived">Gps location arrived</string>
    <string name="accuracy">Accuracy:</string>
    <string name="gps_location_is_null">Gps location is null</string>
    <string name="not_sending">Not sending</string>
    <string name="gps_service_is_live">Gps service is live</string>
    <string name="location_expired">Location Expired</string>
    <string name="smart_tag_message">Smart Tag message</string>
    <string name="no_devices_are_available">No Devices are available</string>
    <string name="Details">Show details</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="mac">Mac:</string>
    <string name="serial">Serial:</string>
    <string name="map">Map</string>
    <string name="timeline">TimeLine</string>
    <string name="bluetooth_not_recognized">Bluetooth is not recognized</string>
    <string name="bluetooth_not_enabled">Bluetooth is not enabled</string>
    <string name="gps_service_description">\"Gps service requiring \"</string>
    <string name="Message_Quote">\"Reply on message at : \"</string>
    <string name="New_Message_success">New message was sent successfully</string>
    <string name="empty_message_body">Empty message bodies not allowed</string>
    <string name="all_fields_must_be_not_empty">Empty fields not allowed</string>
    <string name="correct_phone_required">Correct Phone Required</string>
    <string name="has_sent">\" has sent \"</string>
    <string name="msg">msg\n</string>
    <string name="sending_actuall_date">\" Sending it with actual date\"</string>
    <string name="sending_zeros">\" Will be sent with 0.0.0 coordinates due to expired date\"</string>
    <string name="gps_event_transfer">Gps event transfer</string>
    <string name="poor_connection">\"Poor connection detected. Delivery not warranted \"</string>
    <string name="smart_tag_event">Smart Tag event</string>
    <string name="deilvery_failed">Delivery failed</string>
    <string name="data_packet_came">\"Data packet came at: \"</string>
    <string name="last_packet_came">\"Last packet came at: \"</string>
    <string name="serial_number">Serial Number</string>
    <string name="serial_not_available">Serial not Available</string>
    <string name="messages_loading">Messages Loading...</string>
    <string name="app_installed">Приложение Умная Метка установлено</string>
    <string name="awaiting_first_geo_data">Awaiting first geo data</string>
    <string name="imageLoading">Image loading...</string>
    <string name="Delivered">Доставлено</string>
    <string name="not_delivered">Не доставлено</string>
    <string name="functions">Functions</string>
    <string name="latest_events">Latest Events</string>
    <string name="your_message">Your Message</string>
    <string name="bluetooth_enabled_successfully">Request Enabled</string>
</resources>