<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginBottom="40dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/company_name"
        android:textSize="17sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Registration.Company_name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:textAlignment="center"
        android:maxLength="145"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Registration.Person_name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:maxLength="45"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/Registration.Phone"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:maxLength="30"
        android:textAlignment="center"
        android:inputType="phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/Registration.Submit"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:text="@string/submit"
        android:layout_height="wrap_content"/>

</LinearLayout>