<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/sfc_creamy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothArmyActivity">

    <ImageView
        android:id="@+id/DetailedDevs.Close"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/DetailedDevs.DescHolder"
        android:minHeight="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/DetailedDevs.Close"
        app:layout_constraintEnd_toStartOf="@id/DetailedDevs.Image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <TextView
              android:textSize="18sp"
              android:fontFamily="@font/roboto_bold"
              android:text="@string/id"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <TextView
              android:textSize="18sp"
              android:layout_marginStart="5dp"
              android:id="@+id/DetailedDevs.ID"
              android:textColor="@color/black"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
      </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:id="@+id/DetailedDevs.Name"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="18sp"

                android:layout_marginStart="5dp"
                android:id="@+id/DetailedDevs.MAC"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="18sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:id="@+id/DetailedDevs.Serial"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/DetailedDevs.Image"
        android:src="@drawable/bluetooth_dev_brand"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/DetailedDevs.Close"
        android:layout_width="130dp"
        android:layout_height="150dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="5dp"
        android:id="@+id/DetailedDevs.Recycler"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/DetailedDevs.DescHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/DetailedDevs.TabSelector"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/DetailedDevs.Recycler">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/DetailedDevs.Tabs.Map"
            android:text="@string/map"
            android:layout_width="100dp"
            android:layout_height="50dp"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/DetailedDevs.Tabs.TimeLine"
            android:text="@string/timeline"
            android:layout_width="100dp"
            android:layout_height="50dp"/>

    </com.google.android.material.tabs.TabLayout>



    <WebView
        android:id="@+id/DetailedDevs.WebHolder"
        app:layout_constraintTop_toBottomOf="@id/DetailedDevs.TabSelector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/DetailedDevs.WebLoading"
        android:layout_width="80dp"
        style="@style/SpinKitView.Large.Wave"
        app:layout_constraintTop_toTopOf="@id/DetailedDevs.WebHolder"
        app:layout_constraintBottom_toBottomOf="@id/DetailedDevs.WebHolder"
        app:layout_constraintStart_toStartOf="@id/DetailedDevs.WebHolder"
        app:layout_constraintEnd_toEndOf="@id/DetailedDevs.WebHolder"
        android:layout_height="80dp"
        app:SpinKit_Color="@color/hpstandart"/>


    <Button
        android:id="@+id/DetailedDevs.GoFullScreen"
        android:text="На весь экран"
        android:textSize="10sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





</androidx.constraintlayout.widget.ConstraintLayout>